[package]
name = "libasm"
version = "0.1.1"
authors = ["Josh Leverette <coder543@gmail.com>"]
license = "MIT"
repository = "https://github.com/coder543/libasm"
description = "libasm adds inline assembly to stable rust"
keywords = ["assembly", "asm", "stable"]

[dependencies]
syn = { version = "0.12.5", features = ["full", "extra-traits", "visit"] }
proc-macro2 = "0.2.1"
cc = "1.0.4"

[profile.release]
lto = true